--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
  services:
   - type: web
     name: proxy
+    instanceType: free
     env: node
     repo: https://github.com/mklilley/proxy
     buildCommand: npm install
